kayit ekrani ekledim

--- a/EcoMap/Base.lproj/Main.storyboard
+++ b/EcoMap/Base.lproj/Main.storyboard
@@ -17,43 +17,57 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2JT-Ty-pWX">
-                                <rect key="frame" x="112" y="244" width="216" height="34"/>
+                                <rect key="frame" x="68" y="244" width="300" height="34"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="34" id="kW3-Lp-kLP"/>
+                                    <constraint firstAttribute="height" constant="34" id="4z2-4A-wS4"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ncT-mL-bpS">
-                                <rect key="frame" x="112" y="316" width="216" height="34"/>
+                                <rect key="frame" x="68" y="312" width="300" height="34"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="34" id="9E5-Jm-up1"/>
+                                    <constraint firstAttribute="height" constant="34" id="0u0-RG-D8w"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sHA-vV-GXg">
-                                <rect key="frame" x="150" y="404" width="140" height="83"/>
+                                <rect key="frame" x="68" y="380" width="123" height="47"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Giriş Yap"/>
                                 <connections>
                                     <action selector="loginButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1Ct-yF-Q1p"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eJ1-og-s44">
+                                <rect key="frame" x="257" y="383" width="111" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="111" id="pey-xy-0qT"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Kayıt Ol"/>
+                                <connections>
+                                    <action selector="signUpButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dEM-kj-ih8"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="2JT-Ty-pWX" firstAttribute="trailing" secondItem="ncT-mL-bpS" secondAttribute="trailing" id="21U-Cb-gnc"/>
-                            <constraint firstItem="sHA-vV-GXg" firstAttribute="top" secondItem="ncT-mL-bpS" secondAttribute="bottom" constant="54" id="6OJ-KM-m0G"/>
-                            <constraint firstItem="sHA-vV-GXg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="150" id="IKu-HX-6uF"/>
-                            <constraint firstItem="ncT-mL-bpS" firstAttribute="top" secondItem="2JT-Ty-pWX" secondAttribute="bottom" constant="38" id="MFQ-07-oKZ"/>
-                            <constraint firstItem="ncT-mL-bpS" firstAttribute="centerX" secondItem="sHA-vV-GXg" secondAttribute="centerX" id="Nii-kO-QuV"/>
-                            <constraint firstItem="2JT-Ty-pWX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="112" id="edR-Tz-Tnh"/>
-                            <constraint firstItem="2JT-Ty-pWX" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="120" id="jcE-cO-Eum"/>
-                            <constraint firstItem="2JT-Ty-pWX" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="laT-oQ-VcW"/>
-                            <constraint firstItem="2JT-Ty-pWX" firstAttribute="leading" secondItem="ncT-mL-bpS" secondAttribute="leading" id="m5B-gH-NKV"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="sHA-vV-GXg" secondAttribute="bottom" constant="401" id="nFu-a3-0pZ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="sHA-vV-GXg" secondAttribute="bottom" constant="461" id="75E-q6-5Df"/>
+                            <constraint firstItem="2JT-Ty-pWX" firstAttribute="trailing" secondItem="ncT-mL-bpS" secondAttribute="trailing" id="A7J-Bf-fRH"/>
+                            <constraint firstItem="eJ1-og-s44" firstAttribute="leading" secondItem="sHA-vV-GXg" secondAttribute="trailing" constant="66" id="AwX-14-fPu"/>
+                            <constraint firstItem="sHA-vV-GXg" firstAttribute="top" secondItem="ncT-mL-bpS" secondAttribute="bottom" constant="34" id="CMx-Iv-ZW6"/>
+                            <constraint firstItem="sHA-vV-GXg" firstAttribute="bottom" secondItem="eJ1-og-s44" secondAttribute="bottom" id="GGa-Ni-Why"/>
+                            <constraint firstItem="ncT-mL-bpS" firstAttribute="leading" secondItem="sHA-vV-GXg" secondAttribute="leading" id="MLk-hO-45w"/>
+                            <constraint firstItem="2JT-Ty-pWX" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="120" id="WWx-VP-G5j"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="2JT-Ty-pWX" secondAttribute="trailing" constant="72" id="r5k-aJ-okf"/>
+                            <constraint firstItem="2JT-Ty-pWX" firstAttribute="leading" secondItem="ncT-mL-bpS" secondAttribute="leading" id="sgD-C7-s4c"/>
+                            <constraint firstItem="ncT-mL-bpS" firstAttribute="trailing" secondItem="eJ1-og-s44" secondAttribute="trailing" id="tek-Eh-bd4"/>
+                            <constraint firstItem="ncT-mL-bpS" firstAttribute="top" secondItem="2JT-Ty-pWX" secondAttribute="bottom" constant="34" id="veu-wc-nNI"/>
+                            <constraint firstItem="2JT-Ty-pWX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="68" id="xHu-Z5-eRy"/>
+                            <constraint firstItem="eJ1-og-s44" firstAttribute="top" secondItem="ncT-mL-bpS" secondAttribute="bottom" constant="37" id="zbH-BF-2qh"/>
                         </constraints>
                     </view>
                     <connections>
